--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
         uses: andrewnags/test-gha@v4
         with:
           basic-input: 'booooo'
-          GITHUB-REPOSITORY: $GITHUB_REPOSITORY
-          GITHUB-WORKSPACE: $GITHUB_WORKSPACE
+          GITHUB-REPOSITORY: ${{ GITHUB_REPOSITORY }}
+          GITHUB-WORKSPACE: ${{ GITHUB_WORKSPACE }}
       - id: output
         run: echo "The time was ${{ steps.hello.outputs.time }}"
