--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,10 +11,10 @@ jobs:
       - id: variables
         run: echo $GITHUB_REPOSITORY $GITHUB_WORKSPACE
       - id: hello
-        uses: andrewnags/test-gha@v5
+        uses: andrewnags/test-gha@other
         with:
-          basic-input: 'booooo'
-          GITHUB-REPOSITORY: $GITHUB_REPOSITORY
-          GITHUB-WORKSPACE: $GITHUB_WORKSPACE
+          basic_input: 'booooo'
+          GITHUB_REPOSITORY: $GITHUB_REPOSITORY
+          GITHUB_WORKSPACE: $GITHUB_WORKSPACE
       - id: output
         run: echo "The time was ${{ steps.hello.outputs.time }}"
