chg: printing python versions

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,6 +4,12 @@ jobs:
   auto_version_changelog:
     runs-on: ubuntu-latest
     steps:
+      - name: finding python version
+        run: python --version
+
+      - name: finding python3 version
+        run: python3 --version
+
       - id: checkout
         uses: actions/checkout@v2
         with:
