--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
         run: git pull --tags
 
       - name: Generate changelog
-        run: python3 -c "import gitchangelog; gitchangelog.gitchangelog.main()"
+        run: gitchangelog
         env:
           DEBUG_GITCHANGELOG: true
 
